# flet-audio

./: .gitignore  README.md  appveyor.yml  pyproject.toml
examples/audio_example/: pyproject.toml
examples/audio_example/src/: main.py
src/flutter/flet_audio/: README.md  pubspec.yaml
src/flutter/flet_audio/lib/src/: audio.dart
