[project]
name = "flet-audio"
version = "0.1.0"
description = "Audio control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12"
dependencies = [
    "flet>=0.26.0",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/audio"
Repository = "https://github.com/o5b/flet-audio"
Issues = "https://github.com/o5b/flet-audio/issues"

[tool.setuptools.package-data]
"flutter.flet_audio" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.26.0",
]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
